feat: add WorkItem entity

--- a/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
+++ b/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Aggregates\" />
+    <Folder Include="Tools\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
