refactor: resolve code issues from sonar cloud

--- a/Source/Presentation/Kysect.Tamgly.ConsoleClient/Kysect.Tamgly.ConsoleClient.csproj
+++ b/Source/Presentation/Kysect.Tamgly.ConsoleClient/Kysect.Tamgly.ConsoleClient.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Kysect.Tamgly.Core\Kysect.Tamgly.Core.csproj" />
+  </ItemGroup>
+
 </Project>
