--- a/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
+++ b/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
@@ -11,4 +11,8 @@
     <Folder Include="ValueObjects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kysect.Tamgly.Graphs\Kysect.Tamgly.Graphs.csproj" />
+  </ItemGroup>
+
 </Project>
