feat: add .Common project

--- a/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
+++ b/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Kysect.Tamgly.Common\Kysect.Tamgly.Common.csproj" />
     <ProjectReference Include="..\Kysect.Tamgly.Graphs\Kysect.Tamgly.Graphs.csproj" />
   </ItemGroup>
 
