refactor: do not use folders name in namespaces

--- a/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
+++ b/Source/Domain/Kysect.Tamgly.Core/Kysect.Tamgly.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Kysect.Tamgly.Core.csproj.DotSettings" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Aggregates\" />
   </ItemGroup>
 
