--- a/Source/Presentation/Kysect.Tamgly.ConsoleClient/Kysect.Tamgly.ConsoleClient.csproj
+++ b/Source/Presentation/Kysect.Tamgly.ConsoleClient/Kysect.Tamgly.ConsoleClient.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\Domain\Kysect.Tamgly.Core\Kysect.Tamgly.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.44.0" />
+  </ItemGroup>
+
 </Project>
