--- a/Source/Presentation/Kysect.Tamgly.ConsoleClient/Kysect.Tamgly.ConsoleClient.csproj
+++ b/Source/Presentation/Kysect.Tamgly.ConsoleClient/Kysect.Tamgly.ConsoleClient.csproj
@@ -12,7 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.44.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Models\" />
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
 </Project>
